tests/baselines/reference/classExtendsValidConstructorFunction.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsValidConstructorFunction.ts (1 errors) ====
    function foo() { }
    
    var x = new foo(); // can be used as a constructor function
    
    class C extends foo { } // error, cannot extend it though
                    ~~~
!!! error TS2304: Cannot find name 'foo'.